--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 }
 
 header {
-    background-color: #005a9c;
+    background-color: #7166AD;
     color: #ffffff;
     padding: 20px;
     text-align: center;
