--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 
 header {
     background-color: #7166AD;
-    color: #333;
+    color: #ffffff;
     padding: 20px;
     text-align: center;
 }
