--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
 
 body {
-    font-family: 'Open Sans', sans-serif; /* Use Open Sans only */
+    font-family: 'Futura PT', 'Open Sans', sans-serif;
     background-color: #f4f4f4;
     color: #000;
     margin: 0;
@@ -66,6 +66,7 @@ main {
     width: 100%;
     position: relative;
     transition: background-color 0.3s ease;
+    font-family: 'Futura PT', 'Open Sans', sans-serif;
 }
 
 /* Arrow style */
@@ -96,42 +97,73 @@ main {
 /* When open */
 .faq-item.active .faq-answer {
     padding: 20px;
-    max-height: 1000px;  /* Adjust this value */
+    max-height: none;  /* No limit for max height */
 }
 
 /* Back to top button */
 #backToTopBtn {
     position: fixed;
-    bottom: 30px;  
-    right: 30px;   
-    padding: 12px 18px;  
-    background-color: rgba(113, 102, 173, 0.8); 
+    bottom: 30px;  /* Positioned at the bottom */
+    right: 30px;   /* Positioned towards the right */
+    padding: 12px 18px;  /* Adjusted padding for a more rounded button */
+    background-color: rgba(113, 102, 173, 0.8); /* Semi-transparent purple */
     color: white;
     border: none;
-    border-radius: 50%;  
-    font-size: 20px;      
+    border-radius: 50%;  /* Circular button */
+    font-size: 20px;      /* Larger font size for visibility */
     cursor: pointer;
-    display: none;        
-    z-index: 9999;        
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);  
-    transition: opacity 0.3s ease;  
+    display: none;        /* Initially hidden */
+    z-index: 9999;        /* Ensures it's on top of other elements */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);  /* Soft shadow to make it stand out */
+    transition: opacity 0.3s ease;  /* Smooth opacity transition */
+}
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    background-color: rgba(0, 0, 0, 0.4); /* Black with opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+/* The Close Button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 html {
-    scroll-behavior: smooth;  
+    scroll-behavior: smooth;  /* Enables smooth scrolling */
 }
 
 @media (max-width: 600px) {
-    .faq-container {
-        width: 90%; 
-    }
-
     .faq-question {
-        font-size: 18px;  
+        font-size: 18px;  /* Slightly smaller font size for mobile */
         padding: 15px;
     }
 
     .faq-answer {
-        padding: 10px 15px;  
+        padding: 10px 15px;  /* Adjust padding for smaller screens */
     }
 }
