--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,13 @@
 
 body {
     font-family: 'Futura PT', 'Open Sans', sans-serif;
-    background: rgba(0, 0, 0, 0.1) url('https://github.com/CirclesFRG/CirclesFAQ/blob/main/images/Circles.jpg') no-repeat center center fixed;
+    background: rgba(0, 0, 0, 0.1) url('https://raw.githubusercontent.com/CirclesFRG/CirclesFAQ/main/images/Circles.jpg') no-repeat center center fixed;
     background-size: cover; /* Ensures the background image covers the entire screen */
     color: #000;
     margin: 0;
     padding: 0;
 }
+
 /* Style for the logo */
 #logo {
     height: 50px; /* Adjust the size of the logo */
