--- a/styles.css
+++ b/styles.css
@@ -51,13 +51,6 @@ body {
         margin-top: 10px;
     }
 
-    /* Adjust logo and heading position */
-    header {
-        display: block;  /* Stack logo and heading */
-    }
-}
-
-
 main {
     padding: 20px;
 }
@@ -132,8 +125,8 @@ main {
 /* Back to top button */
 #backToTopBtn {
     position: fixed;
-    bottom: 30px;  /* Positioned at the bottom */
-    right: 30px;   /* Positioned towards the right */
+    bottom: 100px;  /* Positioned at the bottom */
+    left: 30px;   /* Positioned towards the right */
     padding: 12px 18px;  /* Adjusted padding for a more rounded button */
     background-color: rgba(113, 102, 173, 0.8); /* Semi-transparent purple */
     color: white;
