--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,11 @@ body {
         text-align: center;
     }
 
+    /* Logo size for mobile */
+    #logo {
+        width: 120px;  /* Smaller logo */
+    }
+
     header h1 {
         font-size: 1.5rem;  /* Smaller heading font size */
     }
@@ -45,6 +50,13 @@ body {
         width: 90%;
         margin-top: 10px;
     }
+
+    /* Adjust logo and heading position */
+    header {
+        display: block;  /* Stack logo and heading */
+    }
+}
+
 
 main {
     padding: 20px;
@@ -120,8 +132,8 @@ main {
 /* Back to top button */
 #backToTopBtn {
     position: fixed;
-    bottom: 100px;  /* Positioned at the bottom */
-    left: 30px;   /* Positioned towards the right */
+    bottom: 30px;  /* Positioned at the bottom */
+    right: 30px;   /* Positioned towards the right */
     padding: 12px 18px;  /* Adjusted padding for a more rounded button */
     background-color: rgba(113, 102, 173, 0.8); /* Semi-transparent purple */
     color: white;
