--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,6 @@ body {
 #searchInput {
     width: 80%;
     padding: 10px;
-    margin-top: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
 }
@@ -73,7 +72,7 @@ main {
 }
 .search-wrapper {
     max-width: 800px;
-    margin: 0 auto;
+    margin: 20px auto 0 auto; /*add top spacing*/
     padding: 0 20px;
     display: flex;
     align-items: center;
