--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body {
 #searchInput {
     width: 80%;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 2px solid #050505;
     border-radius: 5px;
 }
 
